--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,7 +59,9 @@
      <Compile Include="Assets\Scripts\LandscapeBlock.cs" />
      <Compile Include="Assets\Scripts\RessourceBlock.cs" />
      <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
+     <Compile Include="Assets\Scripts\SunRotation.cs" />
      <Compile Include="Assets\Scripts\WorldGrid.cs" />
+     <Compile Include="Assets\Scripts\WorldTile.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
  <Reference Include="Unity.RenderPipelines.Core.Editor">
  <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
@@ -99,57 +101,6 @@
  </Reference>
  <Reference Include="Unity.Analytics.DataPrivacy">
  <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Burst">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Burst.Editor">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Burst.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Entities.Properties">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Entities.Properties.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Properties.Codegen">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Properties.Codegen.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Jobs">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Jobs.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Jobs.Editor">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Jobs.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Entities.Editor">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Entities.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Entities.StaticTypeRegistry">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Entities.StaticTypeRegistry.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Properties">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Properties.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Collections">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Collections.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Entities.Hybrid">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Entities.Hybrid.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Mathematics">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Entities">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Entities.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Transforms">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Transforms.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Transforms.Editor">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Transforms.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Mathematics.Editor">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Transforms.Hybrid">
- <HintPath>D:/Unity/3DRimworld/Library/ScriptAssemblies/Unity.Transforms.Hybrid.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.6f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -360,9 +311,6 @@
  </Reference>
  <Reference Include="Unity.Analytics.Tracker">
  <HintPath>D:/Unity/3DRimworld/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
- </Reference>
- <Reference Include="System.Runtime.CompilerServices.Unsafe">
- <HintPath>D:/Unity/3DRimworld/Library/PackageCache/com.unity.collections@0.0.9-preview.12/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
  </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.6f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
